--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Collage Ninja</title>
+    <!-- <link rel=”stylesheet” href=”https://unpkg.com/material-components-web/dist/material-components-web.min.css">
+    <link rel=”stylesheet” href=”https://fonts.googleapis.com/icon?family=Material+Icons"> -->
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+        }
+        body {
+            margin: 0;
+            background-color: #111;
+            color: limegreen;
+            font-family:'Courier New', Courier, monospace;
+        }
+        main {
+            margin: auto;
+            max-width: 720px;
+            padding: 20px;
+        }
+        .btn {
+            cursor: pointer;
+        }
+        .btn.expand, .btn.collapse {
+            float: right;
+            border: #555 1px solid;
+            border-radius: 3px;
+            padding: 5px;
+            margin-top: -6px;
+        }
+        .btn.hide {
+            display: none;
+        }
 
+    </style>
+</head>
+<body>
+    <main>
+        <h1>Collage Ninja</h1>
+        <p>Developed by Gerald Gehrke</p>
+        <h3>Socials/Support</h3>
+        <p>
+            <a href="https://github.com/TripleG58" title="TripleG58">Github</a>
+            <a href="https://www.paypal.com/paypalme/geraldgehrke" title="Gerald Gehrke">PayPal</a>
+        </p>
+        <h2>Instructions <span class="btn expand hide">Expand</span><span class="btn collapse">Collapse</span></h2>
+        <p>TODO: condense & streamline instructions section based on new, simplified tools.</p>
+        <h2>Choose Photos <span class="btn expand hide">Expand</span><span class="btn collapse">Collapse</span></h2>
+        <p>Photo selection area/list goes here</p>
+        <h2>Options <span class="btn expand hide">Expand</span><span class="btn collapse">Collapse</span></h2>
+        <p>Grid size, duplicate photos, final resolution, framing (inner/outer), etc.<br>
+        File types: .html, .png, .jpg, .svg?</p>
+        <h2>Ouptut</h2>
+        <p>Create button & final, fully processed image goes here.</p>
+    </main>
+    
+
+    <!-- <script src=”3ttps://unpkg.com/material-components-web/dist/material-components-web.min.js"></script> -->
+    <script>
+
+    </script>
+</body>
+</html>
