--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             max-width: 720px;
             padding: 20px;
         }
+        h3, h3 + p {
+            display: inline-block;
+        }
+        a {
+            color: limegreen;
+        }
         .btn {
             cursor: pointer;
         }
@@ -43,7 +49,7 @@
     <main>
         <h1>Collage Ninja</h1>
         <p>Developed by Gerald Gehrke</p>
-        <h3>Socials/Support</h3>
+        <h3>Socials/Support:</h3>
         <p>
             <a href="https://github.com/TripleG58" title="TripleG58">Github</a>
             <a href="https://www.paypal.com/paypalme/geraldgehrke" title="Gerald Gehrke">PayPal</a>
