equalize button width AND add gitignore

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             cursor: pointer;
             user-select: none;
         }
+        .btn.expand {
+            width: 115.219px;
+        }
         .btn.expand, .btn.collapse {
             float: right;
             border: #555 1px solid;
@@ -76,7 +79,6 @@
 
     <!-- <script src=”3ttps://unpkg.com/material-components-web/dist/material-components-web.min.js"></script> -->
     <script>
-
 
 function dqs(str) {
   return document.querySelector(str);
