align button text

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         }
         .btn.expand {
             width: 115.219px;
+            text-align: center;
         }
         .btn.expand, .btn.collapse {
             float: right;
