--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         .btn.expand {
             width: 115.219px;
             text-align: center;
+            letter-spacing: 3.3px;
         }
         .btn.expand, .btn.collapse {
             float: right;
