add middle initial to byline

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
     <main>
         <h1>Collage Ninja</h1>
-        <p>Developed by Gerald Gehrke</p>
+        <p>Developed by Gerald G. Gehrke</p>
         <h3>Socials/Support:</h3>
         <p>
             <a href="https://github.com/TripleG58" title="TripleG58">Github</a>
