--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </p>
         <h2>Instructions <span class="btn expand hide">Expand</span><span class="btn collapse">Collapse</span></h2>
         <p>
-            
+            This is a demonstration of an algorithm I came up with for generating randomly sized boxes to fill an encompassing rectangle without overlapping. The original intent was to generate a randomized collage for my personal portfolio website. Since I found no other tools that accomplished exactly what I wanted effectively, I went to work and designed this tool, Collage Ninja, that other people can use and take advantage of as well! <br>I am hoping to make the library available to all via GitHub to use in other web development situations where you might want a set of images OR DOM ELEMENTS with arbitrary/deviant widths & heights to occupy a single rectangular area. One use I can see for this would be those scroller websites like pinterest, tumblr, even facebook if they so choose. Any website where you see multiple columns of images in a card like structure. Lazy-loading these images can cause height issues and break some layouts. This library aims to solve that while also increasing creative freedom by allowing items with different widths to be placed on the same row. It is not perfect, and will not fit many use cases, but I believe it has a good amount of potential. <br> 
         </p>
         <h2>Choose Photos <span class="btn expand hide">Expand</span><span class="btn collapse">Collapse</span></h2>
         <p>
