--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         }
         p.indent {
             text-indent: 30px;
+            line-height: 1.2rem;
         }
         .btn {
             cursor: pointer;
