--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <a href="https://github.com/TripleG58" title="TripleG58">Github</a>
             <a href="https://www.paypal.com/paypalme/geraldgehrke" title="Gerald Gehrke">PayPal</a>
         </p>
-        <h2>Instructions <span class="btn expand hide">Expand</span><span class="btn collapse">Collapse</span></h2>
-        <div>
+        <h2>Explanation <span class="btn expand">Expand</span><span class="btn collapse hide">Collapse</span></h2>
+        <div class="hide">
             <p class="indent">
                 This is a demonstration of an algorithm I came up with for generating randomly sized boxes to fill an
                 encompassing rectangle without overlapping. The original intent was to generate a randomized collage for
