--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 I am hoping to make the library available to all via GitHub to use in other web development situations
                 where you might want a set of images OR DOM ELEMENTS with arbitrary/deviant widths & heights to occupy a
                 single rectangular area. One use I can see for this would be those scroller websites like pinterest,
-                tumblr, even facebook if they so choose. Any website where you see multiple columns of images in a card
-                like structure. Lazy-loading these images can cause height issues and break some layouts. This library
+                tumblr, even facebook if they so choose. Any website where you see multiple columns of images in a card-like 
+                structure. Lazy-loading these images can cause height issues and break some layouts. This library
                 aims to solve that while also increasing creative freedom by allowing items with different widths to be
                 placed on the same row. It is not perfect, and will not fit many use cases, but I believe it has a good
                 amount of potential.
