changed expander button style to match

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
         h3+p {
             display: inline-block;
         }
-
+        h2 > span.btn {
+            font-size: 0.9rem;
+            font-weight: normal;
+            text-decoration: underline;
+        }
         a {
             color: limegreen;
         }
@@ -45,21 +49,6 @@
         .btn {
             cursor: pointer;
             user-select: none;
-        }
-
-        .btn.expand {
-            width: 115.219px;
-            text-align: center;
-            letter-spacing: 2px;
-        }
-
-        .btn.expand,
-        .btn.collapse {
-            float: right;
-            border: #555 1px solid;
-            border-radius: 3px;
-            padding: 5px;
-            margin-top: -6px;
         }
 
         .hide {
