--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 amount of potential.
             </p>
         </div>
-        <h2>Choose Photos <span class="btn expand hide">Expand</span><span class="btn collapse">Collapse</span></h2>
+        <h2>Photos <span class="btn expand hide">Expand</span><span class="btn collapse">Collapse</span></h2>
         <p>
 
         </p>
