--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <p>
             <a href="https://github.com/TripleG58" title="TripleG58">Github</a>
             <a href="https://www.patreon.com/iggg" title="<3">Patreon</a>
+            <a href="https://www.paypal.com/paypalme/geraldgehrke" title="Gerald Gehrke">PayPal</a>
         </p>
         <h2>Explanation <span class="btn expand">Expand</span><span class="btn collapse hide">Collapse</span></h2>
         <div class="hide">
