--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
             Photos 
             <span class="btn">Choose</span>
             <span class="file-num-container">
-                (   
-                <span class="file-num">0</span>
-                )
+                (<span class="file-num">0</span>)
             </span>
         </h2>
         <p>
