--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         }
 
         .file-num-container {
+            margin-left: -10px;
             font-size: 0.9rem;
             font-weight: normal;
         }
