font-size increase for "choose" button

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             display: none;
         }
 
+        .choose-photos {
+            font-size: 1rem;
+        }
+
         .file-num-container {
             margin-left: -10px;
             font-size: 0.9rem;
@@ -95,7 +99,7 @@
         </div>
         <h2>
             Photos 
-            <span class="btn">Choose</span>
+            <span class="btn choose-photos">Choose</span>
             <span class="file-num-container">
                 (<span class="file-num">0</span>)
             </span>
