css specificity correction

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             display: none;
         }
 
-        .choose-photos {
+        h2 > span.choose-photos {
             font-size: 1rem;
         }
 
