--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <p>
             <a href="https://github.com/TripleG58" title="TripleG58">Github</a>
             <a href="https://www.patreon.com/iggg" title="<3">Patreon</a>
-            <a href="https://www.paypal.com/paypalme/geraldgehrke" title="Gerald Gehrke">PayPal</a>
+            <!-- <a href="https://www.paypal.com/paypalme/geraldgehrke" title="Gerald Gehrke">PayPal</a> -->
         </p>
         <h2>Explanation <span class="btn expand">Expand</span><span class="btn collapse hide">Collapse</span></h2>
         <div class="hide">
@@ -126,10 +126,7 @@
             return document.querySelectorAll(str);
         }
 
-
-
-        (() => {
-            // UI event handlers
+        (() => { // UI event handlers
             function drawerMouseHandler(e) {
                 e.stopPropagation();
                 for (let elem of e.target.parentNode.querySelectorAll('.btn')) {
