remove outdated support header & replace with link to beacons

--- a/index.html
+++ b/index.html
@@ -70,13 +70,7 @@
 <body>
     <main>
         <h1>Collage Ninja</h1>
-        <p>Developed by Gerald G. Gehrke</p>
-        <h3>Support:</h3>
-        <p>
-            <a href="https://github.com/TripleG58" title="TripleG58">Github</a>
-            <a href="https://www.patreon.com/iggg" title="<3">Patreon</a>
-            <!-- <a href="https://www.paypal.com/paypalme/geraldgehrke" title="Gerald Gehrke">PayPal</a> -->
-        </p>
+        <p>Developed by Gerald G. Gehrke - <a href="https://ggg.contact">ggg.contact</a></p>
         <h2>Explanation <span class="btn expand">Expand</span><span class="btn collapse hide">Collapse</span></h2>
         <div class="hide">
             <p class="indent">
